# eepy

./: .env.example  .gitignore  README.md  docker-compose.yaml  package.json  pyproject.toml
.zed/: settings.json
api/: .dockerignore  Dockerfile  config.py  main.py  models.py  pyproject.toml
api/app/: config.py  db.py  deps.py  main.py  models.py  security.py
api/app/routes/: auth.py  url.py  users.py
api/routes/: url.py
web/: .dockerignore  .env.example  Dockerfile  biome.jsonc  index.html  nginx.conf  package.json  pnpm-lock.yaml  test.html  vite.config.ts
web/.husky/: pre-commit
web/.zed/: settings.json
web/src/: App.tsx  index.css  main.tsx
web/src/components/: ActiveUrls.tsx  LogoutButton.tsx  Search.tsx  SearchInput.tsx  UrlCard.tsx  UrlForm.tsx  UserProvider.tsx
web/src/components/card/: Card.tsx  card.module.css
web/src/components/containers/: Containers.tsx  containers.module.css
web/src/components/header/: Header.tsx  header.module.css
web/src/components/layout/: AppLayout.tsx  AuthLayout.tsx  LogoutButton.tsx  ProtectedLayout.tsx  header.module.css
web/src/components/link/: Link.tsx  link.module.css
web/src/components/pagination/: Pagination.tsx  pagination.module.css
web/src/components/skeleton/: Skeleton.tsx  skeleton.module.css
web/src/components/typography/: Typography.tsx  typography.module.css
web/src/hooks/: useAuthStore.ts  useUser.ts
web/src/lib/: actions.ts  data.ts  utils.ts
web/src/lib/actions/: url.ts  (+2 more)
web/src/routes/: Home.tsx  MyUrls.tsx  Profile.tsx  Redirect.tsx  Url.tsx
web/src/types/: url.ts  user.ts
(+19 files in other folders)
